--- a/www/pasta_diet/css/diet.css
+++ b/www/pasta_diet/css/diet.css
@@ -22,6 +22,15 @@
     background: url(../images/diet_bg_01.png) center bottom no-repeat;
 }
 
+#diet .hr-block p{
+    text-align: right;
+    margin-top: 10px;
+}
+
+#diet .hr-block p a{
+    color: #000;
+}
+
 #diet .text-heading{
 }
 
